integrated api for recipient
